Renamed searchpage surveypage

--- a/src/surveypage.html
+++ b/src/surveypage.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <title>Welcome to JQuery</title>
-    <!-- dx charts -->
-    <link href="/Users/pascal/WebstormProjects/HackAmherst/node_modules/survey-jquery/survey.css" type="text/css" rel="stylesheet" />
-    <script src="/Users/pascal/WebstormProjects/HackAmherst/src/index.js"></script>
+    <title>ClubShare - College Club Survey</title>
+    <!--FIREBASE SCRIPTS-->
+    <script src = "https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+
+    <script src="https://unpkg.com/jquery"></script>
+    <script src="https://surveyjs.azureedge.net/1.0.11/survey.jquery.js"></script>
+    <link href="https://surveyjs.azureedge.net/1.0.11/survey.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" href="./index.css">
+
 
 
 </head>
-
 <body>
 <div id="surveyElement"></div>
+<div id="surveyResult"></div>
 
-<div id="result"></div>
+<script type="text/javascript" src="../js/index.js"></script>
 
 </body>
-
 </html>
