modified the survey

--- a/src/surveypage.html
+++ b/src/surveypage.html
@@ -32,7 +32,7 @@
 <strong>
 <div id="realResults" class="adiv"></div>
 
-</strong size="+20">
+</strong>
 <script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
