--- a/src/selectionpage.html
+++ b/src/selectionpage.html
@@ -49,7 +49,7 @@
     <!-- Navbar (placed at the bottom of the header image) -->
     <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-20px">
         <a href="./surveypage.html" class="w3-bar-item w3-button">Take the Survey</a>
-        <a href="./searchpage.html" class="w3-bar-item w3-button">Search Clubs</a>
+        <a href="./welcome.html" class="w3-bar-item w3-button">Search Clubs</a>
     </div>
 </header>
 
