--- a/src/surveypage.html
+++ b/src/surveypage.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./index.css">
 
 </head>
-<body>
+<body bgcolor="#E6E6FA">
 <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
 <script>
     var config = {
